--- a/denied.html
+++ b/denied.html
@@ -3,21 +3,20 @@
 
 <head>
 
-	<!-- META TAGS -->
+	<!-- Meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="autori" content="Alexander Nettenbreijers, Andrea Delli,">
-    <meta name="data" content="maggio 2019">
+    <meta name="autori" content="Andrea Delli, Alexander Nettenbreijers">
+    <meta name="anno-produzione" content="2019">
     <meta name="descrizione" content="Firebird">
-    <meta name="keywords" content="HTML, firewall, logged, login, homepage, info, connessione">
+    <meta name="keywords" content="HTML, firewall, firebird, logged, login, homepage, info, connessione">
 
-	<!-- REFERENCES -->
+	<!-- References -->
     <link rel="shortcut icon" href="./resources/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-	<!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="bundle/bootstrap/bootstrap.css">
-	<script src="bundle/bootstrap/bootstrap.min.js"></script>
-    <!-- FONT-AWESOME -->
+	<!-- Bootstrap CSS-->
+    <link rel="stylesheet" href="bundle/bootstrap/bootstrap.min.css">
+    <!-- Font-Awesome -->
 	<link rel="stylesheet" href="bundle/font-awesome/fontawesome.min.css">
 	<link rel="stylesheet" href="bundle/font-awesome/regular.min.css">
 	<link rel="stylesheet" href="bundle/font-awesome/solid.min.css">
@@ -68,7 +67,10 @@
 	<hr class="sep half">
 	
 	<img src="resources/logo.png" class="background-logo" alt="Logo ITIS Meucci">
+	<!--jQuery-->
 	<script src="js/$.js"></script>
+	<!--Bootstrap JS-->
+	<script src="bundle/bootstrap/bootstrap.min.js"></script>
 	<script src="js/script.js"></script>
 	
 </body>
