Revert "Removed certificate download and tutorial pages"
This reverts commit c14eaea5737164f45c043c236a18a1108f823140.

--- a/denied.html
+++ b/denied.html
@@ -3,20 +3,21 @@
 
 <head>
 
-	<!-- Meta tags -->
+	<!-- META TAGS -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="autori" content="Andrea Delli, Alexander Nettenbreijers">
-    <meta name="anno-produzione" content="2019">
+    <meta name="autori" content="Alexander Nettenbreijers, Andrea Delli,">
+    <meta name="data" content="maggio 2019">
     <meta name="descrizione" content="Firebird">
-    <meta name="keywords" content="HTML, firewall, firebird, logged, login, homepage, info, connessione">
+    <meta name="keywords" content="HTML, firewall, logged, login, homepage, info, connessione">
 
-	<!-- References -->
+	<!-- REFERENCES -->
     <link rel="shortcut icon" href="./resources/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-	<!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="bundle/bootstrap/bootstrap.min.css">
-    <!-- Font-Awesome -->
+	<!-- BOOTSTRAP -->
+    <link rel="stylesheet" href="bundle/bootstrap/bootstrap.css">
+	<script src="bundle/bootstrap/bootstrap.min.js"></script>
+    <!-- FONT-AWESOME -->
 	<link rel="stylesheet" href="bundle/font-awesome/fontawesome.min.css">
 	<link rel="stylesheet" href="bundle/font-awesome/regular.min.css">
 	<link rel="stylesheet" href="bundle/font-awesome/solid.min.css">
@@ -67,10 +68,7 @@
 	<hr class="sep half">
 	
 	<img src="resources/logo.png" class="background-logo" alt="Logo ITIS Meucci">
-	<!--jQuery-->
 	<script src="js/$.js"></script>
-	<!--Bootstrap JS-->
-	<script src="bundle/bootstrap/bootstrap.min.js"></script>
 	<script src="js/script.js"></script>
 	
 </body>
