Added info alerts and fixed card responsiveness

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
 				<!--[INFO_END]-->
 			</div>
 
+			<hr>
+			<div class="alert alert-primary">
+				Per collegarsi a internet utilizza il tuo account di <b>posta istituzionale</b>. <hr>
+                Si ricorda che l'attività è <b>soggetta a monitoraggio</b> come previsto dalla normativa vigente. <hr>
+                <b>ATTENZIONE</b>: ricordati di effettuare la disconnessione al termine della sessione di lavoro.
+			</div>
 		</div>
 	</div>
 
