Changed logout button from yellow to red

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		</button>
 	</div>
 	<div id="logoutbtn-obj">
-		<button onclick="location.href='?dologout'" class="btn-edited google btn-yellow">
+		<button onclick="location.href='?dologout'" class="btn-edited google btn-red">
 			<table>
 				</tr>
 				<td class="img"><img src="resources/g-logo.png"></img></td>
