Changed connect/disconnect buttons
The tag changed from <button> to <a>, so the form uses its href instead of the form action

--- a/index.html
+++ b/index.html
@@ -110,24 +110,24 @@
 
 	<!-- Buttons -->
 	<div id="loginbtn-obj">
-		<button onclick="location.href='?dologin'" class="btn-edited google btn-blue">
+		<a href='?dologin' class="btn-edited google btn-blue">
 			<table>
 				</tr>
 				<td class="img"><img src="resources/g-logo.png"></img></td>
 				<td class="text"><span>Accedi</span></td>
 				</tr>
 			</table>
-		</button>
+		</a>
 	</div>
 	<div id="logoutbtn-obj">
-		<button onclick="location.href='?dologout'" class="btn-edited google btn-red">
+		<a href='?dologout' class="btn-edited google btn-red">
 			<table>
 				</tr>
 				<td class="img"><img src="resources/g-logo.png"></img></td>
 				<td class="text"><span>Disconnetti</span></td>
 				</tr>
 			</table>
-		</button>
+		</a>
 	</div>
 
 	</div>
