Added objects div (to hide buttons below card)

--- a/denied.html
+++ b/denied.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="autori" content="Andrea Delli, Alexander Nettenbreijers">
-	<meta name="anno-produzione" content="2019">
+	<meta name="anno-produzione" content="2019-2020">
 	<meta name="descrizione" content="Firebird">
 	<meta name="keywords" content="HTML, firewall, firebird, logged, login, homepage, info, connessione">
 
@@ -30,7 +30,7 @@
 	<hr class="sep six">
 
 	<div class="card card-red">
-		<img src="resources/logo.png" id="logo" alt="Logo ITIS Meucci">
+		<img src="resources/logo.png" id="logo" alt="ITIS Meucci">
 
 		<hr class="sep three">
 
@@ -63,7 +63,7 @@
 
 	<hr class="sep half">
 
-	<img src="resources/logo.png" class="background-logo" alt="Logo ITIS Meucci">
+	<img src="resources/logo.png" class="background-logo" alt="ITIS Meucci">
 	<!--jQuery-->
 	<script src="js/$.js"></script>
 
