--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="autori" content="Andrea Delli, Alexander Nettenbreijers">
-	<meta name="anno-produzione" content="2019">
+	<meta name="anno-produzione" content="2019-2020">
 	<meta name="descrizione" content="Firebird">
 	<meta name="keywords" content="HTML, firewall, firebird, logged, login, homepage, info, connessione">
 
@@ -30,7 +30,7 @@
 	<hr class="sep six">
 
 	<div class="card">
-		<img src="resources/logo.png" id="logo" alt="Logo ITIS Meucci">
+	<img src="resources/logo.png" id="logo" alt="ITIS Meucci">
 
 		<hr class="sep three">
 
@@ -103,33 +103,33 @@
 
 	<hr class="sep half">
 
-	<!-- Toggle -->
-	<div id="toggle-obj">
-		<div id="toggle"><i class="fas fa-chevron-down"></i></div>
-	</div>
+	<div class="objects">
+		<!-- Toggle -->
+		<div id="toggle-obj">
+			<div id="toggle"><i class="fas fa-chevron-down"></i></div>
+		</div>
 
-	<!-- Buttons -->
-	<div id="loginbtn-obj">
-		<a href='?dologin' class="btn-edited google btn-blue">
-			<table>
-				</tr>
-				<td class="img"><img src="resources/g-logo.png"></img></td>
-				<td class="text"><span>Accedi</span></td>
-				</tr>
-			</table>
-		</a>
-	</div>
-	<div id="logoutbtn-obj">
-		<a href='?dologout' class="btn-edited google btn-red">
-			<table>
-				</tr>
-				<td class="img"><img src="resources/g-logo.png"></img></td>
-				<td class="text"><span>Disconnetti</span></td>
-				</tr>
-			</table>
-		</a>
-	</div>
-
+		<!-- Buttons -->
+		<div id="loginbtn-obj">
+			<a href='?dologin' class="btn-edited google btn-blue">
+				<table>
+					</tr>
+					<td class="img"><img src="resources/g-logo.png"></img></td>
+					<td class="text"><span>Accedi</span></td>
+					</tr>
+				</table>
+			</a>
+		</div>
+		<div id="logoutbtn-obj">
+			<a href='?dologout' class="btn-edited google btn-red">
+				<table>
+					</tr>
+					<td class="img"><img src="resources/g-logo.png"></img></td>
+					<td class="text"><span>Disconnetti</span></td>
+					</tr>
+				</table>
+			</a>
+		</div>
 	</div>
 
 	<img src="resources/logo.png" class="background-logo" alt="ITIS Meucci">
