Changed objects property
Changed from class="objects" to id="objects"

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 	<hr class="sep half">
 
-	<div class="objects">
+	<div id="objects">
 		<!-- Toggle -->
 		<div id="toggle-obj">
 			<div id="toggle"><i class="fas fa-chevron-down"></i></div>
