Hide useless messages depending on connection status
The messages are shown depending on if the user is connected or not

Added defer to the scripts to avoid to wait the load of the files

Refactoring of style.css

--- a/denied.html
+++ b/denied.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
 
+<!-- Repository GitHub: https://github.com/RonPlusSign/Firebird-pages -->
 <head>
 
 	<!-- Meta tags -->
@@ -65,9 +66,10 @@
 
 	<img src="resources/logo.png" class="background-logo" alt="ITIS Meucci">
 	<!--jQuery-->
-	<script src="js/$.js"></script>
+	<script defer src="js/$.js"></script>
 
-	<script src="js/script.js"></script>
+	<!-- Custom scripts -->
+	<script defer src="js/script.js"></script>
 
 </body>
 
