Changed messages depending on connection status
Added documentation to script.js

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 	<img src="resources/logo.png" class="background-logo" alt="ITIS Meucci">
 	<!--jQuery-->
-	<script defer src="js/$.js"></script>
+	<script src="js/$.js"></script>
 
 	<!-- Custom scripts -->
 	<script defer src="js/script.js"></script>
