--- a/denied.html
+++ b/denied.html
@@ -66,7 +66,7 @@
 
 	<img src="resources/logo.png" class="background-logo" alt="ITIS Meucci">
 	<!--jQuery-->
-	<script defer src="js/$.js"></script>
+	<script src="js/$.js"></script>
 
 	<!-- Custom scripts -->
 	<script defer src="js/script.js"></script>
